k8s/service_a/config/service_a.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: service-a-envoy-configmap
  namespace: monitoring
data:
  envoy-config: |
    stats_sinks:
      - name: "envoy.statsd"
        config:
          tcp_cluster_name: "statsd-exporter"
          prefix: service_a
    static_resources:
      listeners:
      -
            name: "service_b_svc_http_listener"
            address:
              socket_address:
                address: "0.0.0.0"
                port_value: 80
            filter_chains:
              -
                filters:
                  -
                    name: "envoy.http_connection_manager"
                    config:
                      access_log:
                      - name: envoy.file_access_log
                        config:
                          path: /tmp/access.log
                          json_format:
                            protocol: "%PROTOCOL%"
                            duration: "%DURATION%"
                            cluster: "%UPSTREAM_CLUSTER%"
                            path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                            bytesSent: "%BYTES_SENT%"
                            bytesReceived: "%BYTES_RECEIVED%"
                            responseCode: "%RESPONSE_CODE%"
                            upstreamHost: "%UPSTREAM_HOST%"
                            upstreamCluster: "%UPSTREAM_CLUSTER%"
                            downstreamRemoteAddress: "%DOWNSTREAM_REMOTE_ADDRESS%"
                            hostname: "%HOSTNAME%"
                            method: "%REQ(:METHOD)%"
                            downstreamCluster: "%REQ(X-ENVOY-DOWNSTREAM-SERVICE-CLUSTER)%"
                      stat_prefix: "egress_service_b_8788"
                      codec_type: "AUTO"
                      route_config:
                        name: "service_b_svc_http_route"
                        virtual_hosts:
                          -
                            name: "service_b_svc_http_route"
                            domains:
                              - "*"
                            routes:
                              -
                                match:
                                  prefix: "/"
                                route:
                                  cluster: "service_b"
                      http_filters:
                        -
                          name: "envoy.router"
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8786
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http_a_8786
              access_log:
                - name: envoy.file_access_log
                  config:
                    path: "/tmp/access.log"
              route_config:
                name: service_a_svc_http_route
                virtual_hosts:
                - name: service_a_svc_http_route
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: service_a
              http_filters:
              - name: envoy.router
                config: {}
      clusters:
      - name: "statsd-exporter"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
        - socket_address:
            address: "statsd-exporter"
            port_value: 9125
      - name: service_a
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8080
      - name: service_b
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: jmx-b
            port_value: 80
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
